--- a/public/assets/demo/demo.css
+++ b/public/assets/demo/demo.css
@@ -145,10 +145,7 @@ body{
   float: right;
   padding-right: 0px;
 }
-.panel-body{
-  padding-left: 20px;
-}
-.odd .btn-cate{
+.odd .btn-cate,.even .btn-cate{
     width: 80px;
     margin-bottom: 5px !important;
     padding: 3px 4px;
@@ -166,30 +163,24 @@ body{
   padding-left: 0;
   padding-top: 5px;
 }
-h3{
-  font-weight: 600;
-}
 .alert{
   margin: 0;
   padding: 5px;
 }
-.form-control, .cke_reset, #cke_content{
+.form-control, .cke_reset{
   width: 93%;
+}
+#cke_content{
+  width: 95%;
 }
 .add-wrapper{
   padding-bottom: 0;
-}
-.box-body{
-  margin-left: 30px;
 }
 .box{
   padding-left: 10px;
 }
 .error{
   margin-bottom: 10px;
-}
-#edit_form{
-  margin-top: 20px;
 }
 #search-form {
   padding-bottom: 20px;
@@ -198,12 +189,11 @@ h3{
   margin-bottom: 45px;
 }
 .right-bar, .left-bar{
-  padding: 0;
+  padding: 10px;
 }
 
 .box-img{
-  padding-top: 50px;
-  padding-bottom: 43px;
+  padding-bottom: 20px;
 }
 .box-cate{
   padding-bottom: 25px;
@@ -216,15 +206,17 @@ h3{
   padding-top: 20px;
 }
 .form-body{
-  margin-bottom: 30px;
-  padding-left: 0;
-  margin-left: 10px;
-  overflow: hidden;
-  background-color: white;
+    margin-bottom: 30px;
+    padding-left: 0;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.1);
 }
 .box{
   border-radius: 0;
-  box-shadow: 0 0 1px 0 rgba(0,0,0,0.1)
+}
+.left-bar{
+  box-shadow: 1px 0px 0px 0px rgba(0,0,0,0.1);
 }
 .box-note{
   padding-bottom: 20px;
@@ -282,6 +274,7 @@ h3{
 }
 #admin-table_length label{
     width: 40%;
+  margin-left: 20px;
 }
 .button_submit{
     margin-left: 30px;
@@ -291,4 +284,41 @@ h3{
 }
 .card{
   margin-bottom: 0;
+}
+.form-control{
+    padding: 3px 12px;
+  width: 95% !important;
+}
+.form-check-inline{
+  display: block;
+}
+.form-check input[type="checkbox"]{
+  opacity: 10;
+  position: relative;
+  visibility: visible;
+}
+.image-edit{
+  margin-bottom: 20px;
+}
+.box-id{
+    height: 65px;
+}
+.alert{
+    margin-bottom: 0px;
+    padding: 15px;
+}
+.box-boder{
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1);;
+}
+#cke_1_contents{
+    height: 400px !important;
+}
+#cke_content{
+    height: 500px;
+}
+.box-padding{
+    padding-bottom: 25px;
+}
+.box-body{
+    margin-bottom: 5px;
 }
