--- a/public/assets/demo/demo.css
+++ b/public/assets/demo/demo.css
@@ -144,6 +144,7 @@ body{
 #admin-table_filter label,#admin-table_paginate{
   float: right;
   padding-right: 0px;
+    margin-right: 0;
 }
 .odd .btn-cate,.even .btn-cate{
     width: 80px;
@@ -235,8 +236,7 @@ body{
   border-radius: 3px;
 }
 #search-form input{
-    margin-right: 10px;
-  width:250px;
+    width:200px;
 }
 .selectpicker {
   margin-left: 10px;
@@ -245,6 +245,7 @@ body{
 .card label{
   color: black;
   font-size: 15px;
+    margin-right: 20px;
 }
 .sidebar .nav p, .off-canvas-sidebar .nav p{
   font-size: 13px;
@@ -262,7 +263,8 @@ body{
     font-size: 15px;
 }
 #search-form .btn, #search-form .btn-primary:active:hover{
-    margin-top: 25px;
+    margin: 0;
+    padding: 6px;
     float:right;
     background-color: #337ab7;
 }
@@ -274,10 +276,9 @@ body{
 }
 #admin-table_length label{
     width: 40%;
-  margin-left: 20px;
 }
-.button_submit{
-    margin-left: 30px;
+.title-form{
+    padding-left: 3px;
 }
 .dataTables_info{
   padding-left: 10px;
@@ -287,7 +288,6 @@ body{
 }
 .form-control{
     padding: 3px 12px;
-  width: 95% !important;
 }
 .form-check-inline{
   display: block;
@@ -321,4 +321,58 @@ body{
 }
 .box-body{
     margin-bottom: 5px;
+}
+.input-group{
+    display: inline-block;
+}
+.input-group-text{
+    height: 34px;
+}
+#navigation form{
+    margin-right: 30px;
+}
+.form-control,.add_button > button, #search-form .btn{
+    font-size: 13px !important;
+}
+.submit-input .btn-flat{
+    padding: 6px;
+    font-size: 14px;
+}
+.submit-input input, .submit-input:hover input, .add_button:focus button,.submit-input:focus input{
+    background-color: #337ab7 !important;
+}
+.input-group .form-control{
+    width: 80%;
+    border-radius: 30px;
+}
+.btn-primary:active, .btn-danger:active{
+    background-color: #bd2130 !important;
+    outline:none;
+}
+.input-group:active{
+    outline: none;
+}
+.sample-text{
+    color: gray;
+    font-style: italic;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.news-image{
+    width: 120px;
+    height: 100px;
+}
+
+.news-image image{
+    width: 100%;
+    height: 100%;
+}
+.news-title{
+    padding-left: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 3px;
+}
+.th-align{
+    text-align: center;
 }
